[package]
name = "mhz19"
version = "0.1.0"
authors = ["Robin Appelman <robin@icewind.nl>"]
edition = "2018"
description = "Accessing MH-Z19 CO₂ sensor over serial bus"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/icewind1991/mhz19-rs"
documentation = "https://docs.rs/mhz19/"

[lib]
name = "mhz19"
path = "src/lib.rs"

[[bin]]
name = "log"
path = "src/bin.rs"

[dependencies]
"serial" = "0.4"
err-derive = "0.3"
